fixed overflow and failing ci

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    height: 10vh;
+    height: 100px;
     width: 100%;
     display: flex;
     align-items: center;
