--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,10 +1,11 @@
 .header {
-    height: 10vh;
+    height: 100px;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color:chocolate;
+    background-size: cover;
     color: antiquewhite;
     font-size: 5em;
 }
