--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -1,9 +1,11 @@
 .main {
-    height: 80vh;
+    height: 100%;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    column-gap: 6em;
+    padding-bottom: 100px;
     background-color: antiquewhite;
 }
