--- a/src/components/Sign/sign.css
+++ b/src/components/Sign/sign.css
@@ -1,13 +1,16 @@
 .sign {
-    width: 25vw;
-    height: 20vh;
+    width: 15em;
+    height: 15em;
     display: flex;
+    border-radius: 5px;
     flex-direction: column;
     background-color: orange;
     justify-content: center;
     align-items: center;
+    margin-top: 4em;
 }
 
 .name {
     text-transform: uppercase;
 }
+
